v2.0.34 (2020-06-09)
-------------------
- fix to poissonHMM.load_hmm_from_hdf5 for backward compatibility

v2.0.33 (2020-06-09)
-------------------
- fix to poissonHMM.load_hmm_from_hdf5 for backward compatibility

v2.0.32 (2020-06-09)
-------------------
- wierd type error in h5io.get_spike_data, sovled with if condition, should
  really hunt down source of why someimtes its int and others int32

v2.0.31 (2020-06-09)
-------------------
- minor fix to hmmIO to account for older models lacking newer saved parameters

v2.0.30 (2020-06-08)
-------------------
- minor fix to hmmIO to account for older models lacking newer saved parameters

v2.0.29 (2020-06-06)
-------------------
- minor fix to HmmHandler when all parameters are already fit

v2.0.28 (2020-06-05)
-------------------
- poissonHMM now stores history of log likelihood

v2.0.27 (2020-06-04)
-------------------
- fix to get_spike_data when returning data for all dins
- refined hmm handler parameter matching
- minor change to expand functionality of get_spike_data
- Modified poissonHMM to allow only using a subset of trials in fitting

v2.0.26 (2020-5-28)
-------------------
- Bug fix in poissonHMM saving and loading
- Change convergence test for poissonHMM fitting

v2.0.25 (2020-5-25)
-------------------
- Fix bug in PoissonHMM, will only try to fit for dig_ins with spike_array
- PoissonHMM hdf5 now stores the cost array for all iterations of fitting

v2.0.24 (2020-5-12)
-------------------
- Fix error in create_trial_table: support digital out

v2.0.23 (2020-5-12)
-------------------
- Fix error in create_trial_table

v2.0.22 (2020-5-1)
-------------------
- Updated requirements
- Fix error in create_trial_table

v2.0.21 (2020-4-9)
-------------------
- Minor fix in PoissonHMM

v2.0.20 (2020-4-2)
-------------------
- Re-structure poissonHMM module to streamline HMM fitting and parameter sweeps

v2.0.19 (2020-3-21)
-------------------
- Fix to make_psth_arrays