@@ -1,3 +1,4 @@
+- Add helper function in poissonHMM to get HmmHandler overview directly from hdf5
 v2.0.34 (2020-06-09)
 -------------------
 - fix to poissonHMM.load_hmm_from_hdf5 for backward compatibility
